Actualizacion de Api individuales
